--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/material": "^5.3.1",
     "@skynexui/components": "^1.23.7",
+    "@supabase/supabase-js": "^1.29.4",
     "font-awesome": "^4.7.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
